Clean Up + Update due to event management changes + properties update

--- a/org.jrebirth/analyzer/src/main/resources/jrebirth.properties
+++ b/org.jrebirth/analyzer/src/main/resources/jrebirth.properties
@@ -14,9 +14,9 @@
 ###								Global Application Management									###
 ###################################################################################################
 
-defaultStageHeight=700
-defaultStageWidth=900
-defaultStageColor=
+applicationStageHeight=600
+applicationStageWidth=800
+#applicationStageColor=
 
 
 ###################################################################################################
