--- a/org.jrebirth/archetype/src/main/resources/archetype-resources/src/main/resources/jrebirth.properties
+++ b/org.jrebirth/archetype/src/main/resources/archetype-resources/src/main/resources/jrebirth.properties
@@ -9,6 +9,12 @@
 ###################################################################################################
 
 
+###################################################################################################
+###									Application Core Management									###
+###################################################################################################
+
+developerMode=true
+threadPoolSize=4
 
 ###################################################################################################
 ###								Global Application Management									###
@@ -22,6 +28,7 @@ defaultStageColor=
 ###################################################################################################
 ###										Font Management											###
 ###################################################################################################
+
 fontsFolder=font
 trueTypeFontExtension=.ttf
 
