--- a/org.jrebirth/core/.project
+++ b/org.jrebirth/core/.project
@@ -15,10 +15,16 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>com.structure101.java.eclipse.plugin.JDMEclipseBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.sonar.ide.eclipse.core.sonarNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+		<nature>com.structure101.java.eclipse.plugin.JDMEclipseNature</nature>
 	</natures>
 </projectDescription>
