--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -215,6 +215,21 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.0</version>
+				
+				<executions>
+					<execution>
+						<id>attach-site</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+				
+				<configuration>
+					<stagingDirectory>${project.build.directory}/staging-site</stagingDirectory>
+					<stagingSiteURL>${project.distributionManagement.site.url}/${project.groupId}.${project.artifactId}-${project.version}</stagingSiteURL>
+				</configuration>
+
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.wagon</groupId>
@@ -286,6 +301,12 @@
 					<failOnError>true</failOnError>
 				</configuration>
 			</plugin>
+
+ 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.6</version>
+			</plugin>
 		</plugins>
 	</reporting>
 
@@ -323,7 +344,7 @@
 		<site>
 			<id>JRebirth_Sites</id>
 			<name>JRebirth Sites</name>
-			<url>ftp://jrebirth.org/sites/${project.groupId}.${project.artifactId}-${project.version}</url>
+			<url>ftp://jrebirth.org/sites</url>
 		</site>
 
 	</distributionManagement>
