--- a/org.jrebirth/distribution/pom.xml
+++ b/org.jrebirth/distribution/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.2</version>
+		<version>0.8.0-SNAPSHOT</version>
 		<relativePath>../</relativePath>
 	</parent>
 
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.2</version>
+			<version>0.8.0-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>analyzer</artifactId>
-			<version>0.7.2</version>
+			<version>0.8.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 
