--- a/org.jrebirth/analyzer/pom.xml
+++ b/org.jrebirth/analyzer/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>jrebirth</artifactId>
 		<groupId>org</groupId>
-		<version>0.7.2</version>
+		<version>0.8.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jrebirth</groupId>
@@ -168,7 +168,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.2</version>
+			<version>0.8.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
