--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -30,6 +30,7 @@
 		<module>presentation</module>
 		<module>transition</module>
 		<module>distribution</module>
+		<!-- <module>form</module> -->
 	</modules>
 
 	<issueManagement>
@@ -181,7 +182,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
-				<!-- <executions> <execution> <phase>package</phase> <goals> <goal>test-jar</goal> </goals> </execution> </executions> -->
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<skipIfEmpty>true</skipIfEmpty>
 				</configuration>
@@ -240,8 +248,21 @@
 						<artifactId>wagon-ssh</artifactId>
 						<version>2.0</version>
 					</dependency>
+
+					<dependency>
+						<groupId>org.tinyjee.dim</groupId>
+						<artifactId>doxia-include-macro</artifactId>
+						<version>1.1</version>
+					</dependency>
+
+					<dependency>
+						<groupId>org.apache.maven.doxia</groupId>
+						<artifactId>doxia-module-docbook-simple</artifactId>
+						<version>1.3</version>
+					</dependency>
 				</dependencies>
 			</plugin>
+
 
 			<!-- Project Quality -->
 			<plugin>
@@ -337,9 +358,9 @@
 	<distributionManagement>
 
 		<repository>
-			<id>JRebirth-Release</id>
-			<name>JRebirth Releases Repository</name>
-			<url>http://repo.jrebirth.org/jrebirth-release-local</url>
+			<id>bintray-jrebirth-JRebirth-JRebirth</id>
+			<name>jrebirth-JRebirth-JRebirth</name>
+			<url>https://api.bintray.com/maven/jrebirth/JRebirth/JRebirth/</url>
 		</repository>
 
 		<snapshotRepository>
