Manage site l&f with a dedicated skin

--- a/org.jrebirth/analyzer/pom.xml
+++ b/org.jrebirth/analyzer/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>org.jrebirth</groupId>
 	<artifactId>analyzer</artifactId>
 
-	<name>JRebirth Analyzer</name>
+	<name>Analyzer</name>
 
 	<properties>
 
