--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -5,8 +5,7 @@
 	<version>0.8.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	<name>JRebirth Parent Project</name>
-	<description>The base classes for all projects</description>
+	<name>JRebirth</name>
 	<url>http://sites.jrebirth.org/org.jrebirth-${project.version}</url>
 
 	<properties>
@@ -280,6 +279,7 @@
 				<version>2.2</version>
 			</extension>
 		</extensions>
+		
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
@@ -413,4 +413,5 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<description>JRebirth is an Application Framework dedicated to JavaFX 2+ technology.</description>
 </project>
