--- a/org.jrebirth.site.skin/pom.xml
+++ b/org.jrebirth.site.skin/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jrebirth.site</groupId>
-  <artifactId>skin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  
-  <name>Skin</name>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.jrebirth.site</groupId>
+	<artifactId>skin</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+
+	<name>Skin</name>
 	<description>JRebirth Maven site Skin</description>
 
 	<build>
@@ -40,6 +40,28 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+
+		<repository>
+			<id>JRebirth-Release</id>
+			<name>JRebirth Releases Repository</name>
+			<url>http://repo.jrebirth.org/jrebirth-release-local</url>
+		</repository>
+
+		<snapshotRepository>
+			<id>JRebirth-Snapshot</id>
+			<name>JRebirth Snasphots Repository</name>
+			<url>http://repo.jrebirth.org/jrebirth-snapshot-local</url>
+		</snapshotRepository>
+
+		<site>
+			<id>JRebirth_Sites</id>
+			<name>JRebirth Sites</name>
+			<url>ftp://jrebirth.org/sites/org.jrebirth-${project.version}</url>
+		</site>
+
+	</distributionManagement>
 
 	<profiles>
 		<profile>
@@ -116,6 +138,6 @@
 			</reporting>
 		</profile>
 	</profiles>
-  
-  
+
+
 </project>
