--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org</groupId>
 	<artifactId>jrebirth</artifactId>
-	<version>0.8.0-SNAPSHOT</version>
+	<version>0.7.3-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Parent</name>
@@ -27,11 +28,12 @@
 		<!-- <module>component</module> -->
 		<module>analyzer</module>
 		<module>archetype</module>
+		<module>sample</module>
 		<module>presentation</module>
 		<module>transition</module>
 		<module>distribution</module>
 		<!-- <module>form</module> -->
-	</modules>
+  </modules>
 
 	<issueManagement>
 		<system>GitHub Issue Tracker</system>
@@ -40,7 +42,7 @@
 
 	<ciManagement>
 		<system>Jenkins</system>
-		<url>http://ci.jrebirth.org/job/JRebirth-master/</url>
+		<url>http://ci.jrebirth.org/job/JRebirth-master</url>
 	</ciManagement>
 
 	<scm>
@@ -255,14 +257,56 @@
 						<version>1.1</version>
 					</dependency>
 
-					<dependency>
-						<groupId>org.apache.maven.doxia</groupId>
-						<artifactId>doxia-module-docbook-simple</artifactId>
-						<version>1.3</version>
-					</dependency>
+					<!-- <dependency> <groupId>org.apache.maven.doxia</groupId> <artifactId>doxia-module-docbook-simple</artifactId> <version>1.3</version> </dependency> -->
 				</dependencies>
 			</plugin>
 
+			<!-- <plugin> <groupId>org.apache.maven.doxia</groupId> <artifactId>doxia-maven-plugin</artifactId> <version>1.2</version> <executions> <execution> <phase>site</phase> <goals> <goal>render-books</goal> 
+				</goals> </execution> </executions> <configuration> <locales>en_US</locales> <books> <book> <directory>src/site</directory> <descriptor>src/site/doc-book.xml</descriptor> <formats> <format> <id>pdf</id> 
+				</format> <format> <id>xdoc</id> </format> <format> <id>xhtml</id> </format> </formats> </book> </books> </configuration> <dependencies> <dependency> <groupId>org.tinyjee.dim</groupId> <artifactId>doxia-include-macro</artifactId> 
+				<version>1.1</version> </dependency> </dependencies> </plugin> -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-pdf-plugin</artifactId> <version>1.2</version> <executions> <execution> <phase>site</phase> <goals> <goal>pdf</goal> </goals> 
+				<configuration> <includeReports>false</includeReports> <locales>en_US</locales> </configuration> </execution> </executions> <dependencies> <dependency> <groupId>org.tinyjee.dim</groupId> <artifactId>doxia-include-macro</artifactId> 
+				<version>1.1</version> </dependency> </dependencies> </plugin> -->
+
+			<plugin>
+				<groupId>com.agilejava.docbkx</groupId>
+				<artifactId>docbkx-maven-plugin</artifactId>
+				<version>2.0.14-SNAPSHOT</version>
+
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate-html</goal>
+							<goal>generate-pdf</goal>
+							<goal>generate-manpages</goal>
+							<goal>generate-eclipse</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
+				<configuration>
+					<highlightSource>1</highlightSource>
+					<foCustomization>src/docbkx/docbook-fo.xsl</foCustomization>
+
+					<!-- <includes>article.xml</includes> -->
+				</configuration>
+
+				<dependencies>
+					<dependency>
+						<groupId>net.sf.xslthl</groupId>
+						<artifactId>xslthl</artifactId>
+						<version>2.0.1</version>
+						<scope>runtime</scope>
+					</dependency>
+					<dependency>
+						<groupId>net.sf.offo</groupId>
+						<artifactId>fop-hyph</artifactId>
+						<version>1.2</version>
+						<scope>runtime</scope>
+					</dependency>
+				</dependencies>
+			</plugin>
 
 			<!-- Project Quality -->
 			<plugin>
@@ -303,7 +347,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore/>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
