--- a/org.jrebirth/distribution/pom.xml
+++ b/org.jrebirth/distribution/pom.xml
@@ -25,7 +25,7 @@
 				<executions>
 					<execution>
 						<id>package-all</id>
-						<phase>verify</phase>
+						<phase>post-site</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
