--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -184,6 +184,12 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.4</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
 				<executions>
@@ -233,12 +239,24 @@
 				<version>3.2</version>
 
 				<executions>
-
 					<execution>
-						<phase>post-site</phase>
-						<id>attach-site</id>
+						<id>attach-sites</id>
 						<goals>
 							<goal>jar</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>build-sites</id>
+						<phase>package</phase>
+						<goals>
+							<goal>stage</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>deploy-sites</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>stage-deploy</goal>
 						</goals>
 					</execution>
 				</executions>
