Exclude test resource from generated jar, core artifact is now 63kb with pack200

--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -98,27 +98,30 @@
 			</resource>
 			<resource>
 				<filtering>false</filtering>
-				<directory>${basedir}/src/test/java</directory>
-				<includes>
-					<include>**/*.fxml</include>
-					<include>**/*.properties</include>
-				</includes>
-			</resource>
-			<resource>
-				<filtering>false</filtering>
 				<directory>${basedir}/src/main/resources</directory>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
 			</resource>
-			<resource>
+		</resources>
+
+		<testResources>
+			<testResource>
+				<filtering>false</filtering>
+				<directory>${basedir}/src/test/java</directory>
+				<includes>
+					<include>**/*.fxml</include>
+					<include>**/*.properties</include>
+				</includes>
+			</testResource>
+			<testResource>
 				<filtering>false</filtering>
 				<directory>${basedir}/src/test/resources</directory>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
-			</resource>
-		</resources>
+			</testResource>
+		</testResources>
 
 		<plugins>
 			<plugin>
